--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,10 @@
             <a routerLink="upload" routerLinkActive="active" class="nav-link">Upload</a>
         </li>
         <li class="nav-item">
-            <a routerLink="display" routerLinkActive="active" class="nav-link">Display</a>
+            <a routerLink="display" routerLinkActive="active" class="nav-link">Display 2D</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="display3d" routerLinkActive="active" class="nav-link">Display 3D</a>
         </li>
     </ul>
 </nav>
